admin api functions added
